# quicksviewer

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: LEARNING_GUIDE_CN.md  QUICKSVIEWER_SGLANG_ADAPT_CN.md  todo.md
playground/: demo.py
quicksviewer/: constants.py  conversation.py
quicksviewer/data/: dataset.py  preprocess.py
quicksviewer/eval/: eval_activitynet_qa.py  eval_mlvu.py  eval_mvbench.py  eval_nextqa.py  eval_video_mme.py  eval_videochatgptqa.py  run_eval.sh  utils.py
quicksviewer/eval/tools/: llm_api_sglang.py  llm_eval_qa.py
quicksviewer/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py  utils.py
quicksviewer/model/language_model/: llava_llama.py  llava_qwen.py
quicksviewer/model/multimodal_cubing/: builder.py  cubing_momentum.py
quicksviewer/preprocess/: change_datasets.py  convert_2tsv.py  convert_anetcaptions.py  convert_finevideo.py  convert_llavaov_multi_images.py  convert_llavaov_single_image.py  convert_llavapretrain.py  convert_llavarecap558.py  convert_longvilasft.py  convert_moviechat.py  convert_obelicts_2pretrain.py  convert_sharegpt4video.py  convert_videochat2it.py  convert_webvid400k.py  run_prepro.sh  split_activitynet.py  template.py  utils.py
quicksviewer/serve/: cli.py
quicksviewer/train/: args.py  llava_trainer.py  train.py  train_hybrid.py  train_repack.py  utils.py
quicksviewer/utils/: data_util.py  mm_utils.py  template.py  utils.py
scripts/: zero1.json  zero1_bf16_off.json  zero2.json  zero2_bf16.json  zero3.json
scripts/quicksviewer/: stage1.sh  stage2.sh  stage3.sh
(+18 files in other folders)
