[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksviewer"
version = "1.0.0.dev0"
description = "Quicksviewer model."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
standalone = [
    "shortuuid",
    "httpx==0.24.0",
    "einops",
    "ftfy",
]

train = [
    "torch==2.4.1",
    "torchvision",
    "decord",
    "opencv-python",
    "fairscale",
    "openai",
    "jsonlines",
    "deepspeed==0.16.5",
    "pytest",
    "matplotlib",
    "datasets==3.2.0",
    "seaborn",
    "braceexpand",
    "numpy==2.2.2",
    "accelerate==1.3.0",
    "transformers==4.44.0",
    "ipdb",
    "multiprocess==0.70.16",
    "wandb",
    "jupyterlab==3.1.9",
]

[project.urls]
"Homepage" = "https://quicksviewer.github.io"
"Bug Tracker" = "https://github.com/quicksviewer/quicksviewer/issues"

[tool.setuptools.packages.find]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]